[project]
name = "heavyswag"
version = "0.1.0"
description = "The hype python web framework"
requires-python = ">=3.12"
dependencies = []

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "semgrep>=1.156.0",
    "zizmor>=1.23.1",
]